@@ -131,6 +131,8 @@
 *		19/07/18 Fixed cppcheck warning in the driver.
 * 1.6   aru     08/18/18 Resolved MISRA-C mandatory violations.
 * 1.7	adk	08/03/19 Added support for versal IP.
+* 1.7   adk     18/03/19 Updated the writeonly mode example data verification
+*			 check to support versal adma IP.
 * </pre>
 *
 ******************************************************************************/
